tests/fixtures/errors/DUPLICATE_ON__B.tsl
DROP stick ON Twitch Host WITH viewers = 10
# A comment between
DROP diamond ON Twitch Host WITH viewers = 20
